--- a/pom.xml
+++ b/pom.xml
@@ -6,34 +6,17 @@
 
     <groupId>com.ninedemons</groupId>
     <artifactId>circuit-breaker</artifactId>
+    <packaging>pom</packaging>
     <version>0.1</version>
 
+    <properties>
+        <applicationVersion>1.0-SNAPSHOT</applicationVersion>
+    </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>apache-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
-        </dependency>
+    <modules>
+        <module>sample</module>
+        <module>core</module>
+    </modules>
 
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.0.4</version>
-		</dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>jmock</groupId>
-			<artifactId>jmock</artifactId>
-			<version>1.0.1</version>
-			<scope>test</scope>
-		</dependency>
-    </dependencies>
 </project>
