--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
     compile project(':core'), 'commons-httpclient:commons-httpclient:3.1', 'commons-logging:commons-logging:1.0.4'
 }
+
+description = 'Samples'
